--- a/episodes/season_25.yml
+++ b/episodes/season_25.yml
@@ -3,7 +3,7 @@ episodes:
 - title: Homerland
   season: 25
   episode: 1
-  release_date:
+  release_date: 2013-09-29
   directors:
   writers:
   description: When Homer returns from a Nuclear Workers Convention and begins behaving
@@ -16,7 +16,7 @@ episodes:
 - title: Treehouse of Horror XXIV
   season: 25
   episode: 2
-  release_date:
+  release_date: 2013-10-06
   directors:
   writers:
   description: In three terrifying Halloween tales, Bart, Lisa and Maggie receive
@@ -29,7 +29,7 @@ episodes:
 - title: Four Regrettings and a Funeral
   season: 25
   episode: 3
-  release_date:
+  release_date: 2013-11-03
   directors:
   writers:
   description: A Springfield funeral prompts Marge, Kent Brockman, Homer and Mr. Burns
@@ -42,7 +42,7 @@ episodes:
 - title: YOLO
   season: 25
   episode: 4
-  release_date:
+  release_date: 2013-11-10
   directors:
   writers:
   description: After experiencing a midlife crisis, Homer reaches out to an old pen
@@ -55,7 +55,7 @@ episodes:
 - title: Labor Pains
   season: 25
   episode: 5
-  release_date:
+  release_date: 2013-11-17
   directors:
   writers:
   description: Homer gets trapped in an elevator with a pregnant woman and helps deliver
@@ -68,7 +68,7 @@ episodes:
 - title: The Kid Is All Right
   season: 25
   episode: 6
-  release_date:
+  release_date: 2013-11-24
   directors:
   writers:
   description: Lisa is elated to befriend Isabel, a smart new student at school, only
@@ -80,7 +80,7 @@ episodes:
 - title: Yellow Subterfuge
   season: 25
   episode: 7
-  release_date:
+  release_date: 2013-12-08
   directors:
   writers:
   description: Bart seeks revenge after Skinner prevents him from attending a school
@@ -93,7 +93,7 @@ episodes:
 - title: White Christmas Blues
   season: 25
   episode: 8
-  release_date:
+  release_date: 2012-12-15
   directors:
   writers:
   description: As Christmas approaches, Marge transforms the house into a bed and
@@ -106,7 +106,7 @@ episodes:
 - title: Steal This Episode
   season: 25
   episode: 9
-  release_date:
+  release_date: 2014-01-05
   directors:
   writers:
   description: Homer is put on trial after the FBI catches him illegally downloading
